@@ -1,5 +1,11 @@
 2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build maint] Don't bundle modsup.h; copy 3 macros from it, instead.
+
+	* autogen.sh: Don't maintain modsup.h, modsup.h.snap.
+
+2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build inst] Add support for "no C module" mode.
 
 	* autogen.sh: Import Guile-BAUX module ‘gen-scheme-wrapper’.
